feat:中期功能修补 根据指导说明书统一表命名

--- a/src/main/java/com/ksptooi/biz/模块划分指导说明书(基于包).md
+++ b/src/main/java/com/ksptooi/biz/模块划分指导说明书(基于包).md
@@ -26,16 +26,16 @@
 
 - **职责**: 负责提供面向开发人员的 API 请求调试、保存和管理功能。
 - **包路径**: `com.ksptooi.biz.requestdebug`
-- **数据库表前缀**: `debug_`
+- **数据库表前缀**: `rdbg_`
 - **包含内容**:
   - 用户保存的 HTTP 请求的管理 (包括请求分组、排序等)
   - 调试环境与环境变量的管理
   - 请求日志、过滤器及其他与 API 调试辅助相关的功能
-  - 
+
 ## 4. 请求文档模块 (document)
 
 - **职责**: 负责提供面向开发人员的请求文档。
 - **包路径**: `com.ksptooi.biz.document`
 - **数据库表前缀**: `ep_`
 - **包含内容**:
-    - 请求文档相关组件
+  - 请求文档相关组件
