--- a/src/main/java/com/ksptooi/biz/模块划分指导说明书(基于包).md
+++ b/src/main/java/com/ksptooi/biz/模块划分指导说明书(基于包).md
@@ -8,9 +8,9 @@
 - **包路径**: `com.ksptooi.biz.core`
 - **数据库表前缀**: `core_`
 - **包含内容**:
-  - 用户认证与授权 (用户、角色、权限)
-  - 系统基础管理 (菜单、配置项、会话管理)
-  - 系统维护与监控功能
+    - 用户认证与授权 (用户、角色、权限)
+    - 系统基础管理 (菜单、配置项、会话管理)
+    - 系统维护与监控功能
 
 ## 2. 中继服务 (relay)
 
@@ -18,19 +18,19 @@
 - **包路径**: `com.ksptooi.biz.relay`
 - **数据库表前缀**: `relay_`
 - **包含内容**:
-  - 中继服务器的定义与管理
-  - 路由规则与目标服务器的管理
-  - 流经中继服务器的 HTTP 请求流量的记录与分析
+    - 中继服务器的定义与管理
+    - 路由规则与目标服务器的管理
+    - 流经中继服务器的 HTTP 请求流量的记录与分析
 
 ## 3. 请求调试 (requestdebug)
 
 - **职责**: 负责提供面向开发人员的 API 请求调试、保存和管理功能。
-- **包路径**: `com.ksptooi.biz.requestdebug`
+- **包路径**: `com.ksptooi.biz.rdbg`
 - **数据库表前缀**: `rdbg_`
 - **包含内容**:
-  - 用户保存的 HTTP 请求的管理 (包括请求分组、排序等)
-  - 调试环境与环境变量的管理
-  - 请求日志、过滤器及其他与 API 调试辅助相关的功能
+    - 用户保存的 HTTP 请求的管理 (包括请求分组、排序等)
+    - 调试环境与环境变量的管理
+    - 请求日志、过滤器及其他与 API 调试辅助相关的功能
 
 ## 4. 请求文档模块 (document)
 
@@ -38,4 +38,4 @@
 - **包路径**: `com.ksptooi.biz.document`
 - **数据库表前缀**: `ep_`
 - **包含内容**:
-  - 请求文档相关组件
+    - 请求文档相关组件
